2010-10-25  Junichi Satoh  <junichi@rworks.jp>

	* godmode/agentes/module_manager_editor_network.php: Added enterprise
	check before isModuleAdopt(). It is not in opensource version.

2010-10-22  Ramon Novoa  <rnovoa@artica.es>

	* include/styles/pandora_minimal.css, include/fgraph.php,
	  include/functions_fsgraph.php, operation/agentes/stat_win.php: Added
	  support for chart baseline (Enterprise).

2010-10-22  Raúl Mateos <raulofpandora@gmail.com>

	* godmode/db/db_refine.php, godmode/agentes/manage_config_remote.php,
	godmode/admin_access_logs.php, godmode/snmpconsole/snmp_filters.php,
	godmode/snmpconsole/snmp_alert.php: Updated year, close html tags, put pixel
	in tables, center some icons, small cosmetics changes.

2010-10-22  Junichi Satoh  <junichi@rworks.jp>

	* godmode/massive/massive_standby_alerts.php: Improved template
	selection to be selected more than one. Added agent selection. (It can
	also be selected more than one.)

2010-10-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_config.php: fixed the change the flag tconfig
	"can_block_policies", now the operation is between policy semaphore.
	
	Fixes: #3091940

	* include/functions_db.php: fixed the save user IP when the $config don't
	load this var yet.
	
	* include/functions_networkmap.php: fixed the translation call function when
	the pandora don't load the function.

2010-10-21  Miguel de Dios  <miguel.dedios@artica.es>
	
	* include/functions_config.php: added check tconfig parameter
	"can_block_policies" in functions.
	
	Pending task: #3080762
	
	* operation/agentes/ver_agente.php: added hook enterprise the tab policy.
	
	Pending task: #3080762

	* include/functions_ui.php, operation/agentes/estado_monitores.php: cleaned
	source code style.

2010-10-20  Sergio Martin <sergio.martin@artica.es>

	* godmode/servers/manage_export_form.php
	godmode/servers/manage_recontask.php
	godmode/servers/manage_recontask_form.php: Improved and fixed