@@ -1,3 +1,9 @@
+2010-10-25  Raúl Mateos <raulofpandora@gmail.com>
+
+	* images/control*.png: Added two small images for sound control in setup.
+	
+	* godmode/setup/setup.php: Use added images.
+
 2010-10-25  Junichi Satoh  <junichi@rworks.jp>
 
 	* godmode/agentes/module_manager_editor_network.php: Added enterprise
